final-for-review

--- a/app/views/game/cut.html.erb
+++ b/app/views/game/cut.html.erb
@@ -29,7 +29,7 @@
           <h2><%=@computer_move%></h2>
         </div>
         <div class="panel-body">
-          <img class = "img-responsive" src=""</img>
+          <img class = "img-responsive" src="<%=@comp_image_url%>"</img>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
   <div class="row">
     <div class="col-md-12 text-center">
         <h1>
-          <span class="label label-info"><%=@outcome%></span>
+          <span class="label <%=@label_color%>"><%=@outcome%></span>
         </h1>
     </div>
   </div>
