--- a/app/views/game/play.html.erb
+++ b/app/views/game/play.html.erb
@@ -4,12 +4,17 @@
   <meta charset="utf-8">
   <title> Stanley: RockPaperScissors</title>
   <!-- Connect to Bootstrap CSS -->
-  <link rel="stylesheet" href="../../../public/assets/css/bootstrap.css">
+  <!-- <link rel="stylesheet" href="../../../public/assets/css/bootstrap.css"> -->
 
 </head>
 <body>
 
-  <div class="container">
+  <h1>Human move: <%= @human_move %></h1>
+  <h1>AI move: <%=  @ai_move %></h1>
+
+  <h1>Result: <%=  @result %></h1>
+
+  <!-- <div class="container">
     <div class="row horizontal-rule">
       <div class="col-xs-12">
         <hr>
@@ -70,7 +75,7 @@
       </div>
       <div class="col-sm-5"></div>
     </div>
-  </div>
+  </div> -->
 
 
 
