--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,80 @@
 <html>
 <head>
   <title>RockPaperScissors</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
+  <link rel="stylesheet" media="all" href="/assets/application-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css" />
+  <script src="/assets/application-25bd6b47ad2ef49757a639cd9dc9d7c4b137f7a0bf03bb8d13757d905d6dfcef.js"></script>
+  <meta name="csrf-param" content="authenticity_token" />
+<meta name="csrf-token" content="wVsdt0wqvHRJecdoQ9As1CRxRvqbgXYTFUtCKexsGDjwOxW4j1JSWILuFJcG7awCfVZg6i6raPc57BVLxhJMog==" />
+
+  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <hr>
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2 col-xs-12">
+      <div class="btn-group btn-group-justified">
+        <a href="/rock" class="btn btn-block btn-primary">
+          Play Rock
+        </a>
+
+        <a href="/paper" class="btn btn-block btn-info">
+          Play Paper
+        </a>
+
+        <a href="/scissors" class="btn btn-block btn-primary">
+          Play Scissors
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+  <div class="col-md-4 col-md-offset-2 col-xs-6">
+    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h2 class="panel-title text-center">
+          Rock
+        </h2>
+      </div>
+      <div class="panel-body">
+        <img class="img-responsive" src="/assets/images/rock.png">
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4 col-xs-6">
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h2 class="panel-title text-center">
+          Scissors
+        </h2>
+      </div>
+      <div class="panel-body">
+        <img class="img-responsive" src="/assets/images/scissors.png">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="well text-center">
+      <h1>
+
+        <span class="label label-success">
+          You won!
+        </span>
+      </h1>
+    </div>
+  </div>
+</div>
+
+</div>
 
 </body>
 </html>
