its slow, but it works

--- a/app/views/play/scissors.html.erb
+++ b/app/views/play/scissors.html.erb
@@ -39,11 +39,11 @@
     <div class="panel panel-success">
       <div class="panel-heading">
         <h2 class="panel-title text-center">
-          You Played: Rock
+          You Played: Scissors
         </h2>
       </div>
       <div class="panel-body">
-        <img class="img-responsive" src="/assets/images/rock.png">
+        <img class="img-responsive" src="/assets/images/scissors.png">
       </div>
     </div>
   </div>
