--- a/app/views/rps/result.html.erb
+++ b/app/views/rps/result.html.erb
@@ -4,17 +4,11 @@
   <div class="row header">
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
-      <div class="btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
-        <div class="btn-group" role="group">
-          <button type="button" class="btn btn-default btn-primary"><a href="/rock">Play Rock</a></button>
+      <div class="btn-group btn-group-justified " role="group" aria-label="...">
+        <a class="btn btn-primary" href="/rock" role="button">Play Rock</a>
+        <a class="btn btn-info" href="/paper" role="button">Play Paper</a>
+        <a class="btn btn-primary" href="/scissors" role="button">Play Scissors</a>
         </div>
-        <div class="btn-group" role="group">
-          <button type="button" class="btn btn-default btn-info"><a href="/paper">Play Paper</a></button>
-        </div>
-        <div class="btn-group" role="group">
-          <button type="button" class="btn btn-default btn-primary"><a href="/scissors">Play Scissors</a></button>
-        </div>
-      </div>
     </div>
     <div class="col-sm-2"></div>
   </div>
