--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,75 @@
 <html>
 <head>
   <title>RockPaperScissors</title>
+  <link rel="stylesheet" href="assets/css/bootstrap.css" media="screen">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+  <div class="container">
+    <hr>
+      <div class="row rps_buttons">
+          <div class="col-md-offset-2 col-md-8 col-xs-12">
+            <div class="btn-group btn-group-justified">
+            <a href="/rock" class="btn btn-block btn-primary">
+              Play Rock
+            </a>
+            <a href="/paper" class="btn btn-block btn-info">
+              Play Paper
+            </a>
+              <a href="/scissors" class="btn btn-block btn-primary">
+                Play Scissors
+              </a>
+            </div>
+          </div>
+        </div>
+          <hr>
+      </div>
+      <div class="row game_results">
+          <div class="col-md-offset-2 col-md-4 col-xs-6">
+            <div class="panel panel-success">
+              <div class="panel-heading">
+                <h2 class="panel-title text-center">
+                  <%= @user_move.capitalize %>
+                </h2>
+              </div>
+              <div class="panel-body">
+                <img class="img-responsive" src="<%= @user_image %>">
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-xs-6">
+            <div class="panel panel-danger">
+              <div class="panel-heading">
+                <h2 class="panel-title text-center">
+                  <%= @computer_move.capitalize %>
+                </h2>
+              </div>
+              <div class="panel-body">
+                <img class="img-responsive" src="<%= @comp_image %>">
+              </div>
+            </div>
+            </div>
+
+
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12 text-center">
+          <div class="well">
+            <h1>
+              <span class="label <%= @result_label%>">
+                <%=@result%>
+              </span>
+            </h1>
+          </div>
+          </div>
+      </div>
+  </div>
+
 
 <%= yield %>
 
