Updated with functionality
Basic logic for three pages coded in (no formatting or linkage between
pages)

--- a/app/views/play/play_scissors.html.erb
+++ b/app/views/play/play_scissors.html.erb
@@ -1,2 +1,3 @@
-
-<p><%= @test_scissors %></p>
+<p>Your move <%= @user_move %></p>
+<p>Computer's move <%= @computer_move %></p>
+<p>You <%= @result %>!</p>
