--- a/app/views/userplays/rock.html.erb
+++ b/app/views/userplays/rock.html.erb
@@ -13,20 +13,35 @@
 <hr>
 <div class="row output_image">
   <div class="col-md-offset-2 col-md-4">
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-          <div class="caption">
-            <h3>Thumbnail label</h3>
-            <img src="/assets/images/rock.png">
-          </div>
-        </div>
+    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h3 class="panel-title text-center">Rock</h3>
+      </div>
+      <div class="panel-body">
+        <img src="/assets/images/rock.png" class="img-responsive">
       </div>
     </div>
   </div>
-  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title text-center">Rock</h3>
+      </div>
+      <div class="panel-body">
+        <img src="/assets/images/rock.png" class="img-responsive">
+      </div>
+    </div>
+  </div>
 </div>
 <div class="row result_btn">
-  <div class="col-xs-12"></div>
+  <div class="col-md-12">
+    <div class="well text-center">
+      <h1>
+        <span class="label label-success">You won!</span>
+      </h1>
+
+
+    </div>
+  </div>
 </div>
 </div>
