--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="http://localhost:3000/assets/css/bootstrap.css">
 <head>
   <title>RockPaperScissors</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
