--- a/app/views/rps/scissors.html.erb
+++ b/app/views/rps/scissors.html.erb
@@ -1,4 +1,11 @@
 <h1>Hi!</h1>
-<h1>You played <%=@user_move%>.</h1>
-<h1>Computer played <%= @comp_move%>.</h1>
 <h1>You <%= @result%>.</h1>
+<p>You played <%=@user_move%>.</p>
+<img src="http://localhost:3000/assets/images/scissors.png">
+<p>Computer played <%= @comp_move%>.</p>
+
+
+<h1>Play again</h1>
+<p><a href="http://localhost:3000/rock">Rock</a></p>
+<p><a href="http://localhost:3000/paper">Paper</a></p>
+<p><a href="http://localhost:3000/scissors">Scissors</a></p>
