--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,59 @@
 <html>
 <head>
   <title>RockPaperScissors</title>
+  <!-- Connect to Bootstrap CSS -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="move col-md-offset-2 col-md-8">
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <div class="btn-group" role="group">
+            <a href="/rock" class="btn btn-block btn-primary">
+              Play Rock
+            </a>
+          </div>
+          <div class="btn-group" role="group">
+            <a href="/paper" class="btn btn-block btn-info">
+              Play Paper
+            </a>
+          </div>
+          <div class="btn-group" role="group">
+            <a href="/scissors" class="btn btn-block btn-primary">
+              Play Scissors
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="user col-md-offset-2 col-md-4">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h3 class="panel-title text-center"> <%= @user_move.capitalize %> </h3>
+        </div>
+        <div class="panel-body">
+          <img class="img-responsive" src="/assets/images/<%=@user_move%>.png">
+        </div>
+      </div>
+    </div>
+    <div class="computer col-md-4">
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          <h3 class="panel-title text-center"> <%= @computer_move.capitalize %> </h3>
+        </div>
+        <div class="panel-body">
+          <img class="img-responsive" src="/assets/images/<%= @computer_move%>.png">
+        </div>
+      </div>
+    </div>
 
-<%= yield %>
+    <%= yield %>
 
-</body>
-</html>
+  </body>
+  </html>
