--- a/app/views/play/play_lost.html.erb
+++ b/app/views/play/play_lost.html.erb
@@ -1,12 +1,13 @@
-<body>
-<div class="row">
-  <div class="result col-md-12">
-    <h1>
-    <div class="well text-center">
-        <span class="label label-danger">
-        You lost!
-        </span>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="well text-center">
+        <h1>
+          <span class="label label-danger">
+            You lost!
+          </span>
+        </h1>
+      </div>
     </div>
-  </h1>
   </div>
 </div>
