third stopping point

--- a/app/views/game/rps_rcav.html.erb
+++ b/app/views/game/rps_rcav.html.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RockPaperScissors</title>
+  <title>RPS-RCAV</title>
   <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
     <div class="panel panel-success">
       <div class="panel-heading">
         <h2 class="panel-title text-center">
-          <%= @user_move.capitalize %>
+          <%=@user_move%>
         </h2>
       </div>
       <div class="panel-body">
@@ -48,7 +48,7 @@
     <div class="panel panel-danger">
       <div class="panel-heading">
         <h2 class="panel-title text-center">
-          <%= @comp_move.capitalize %>
+          <%= @comp_move%>
         </h2>
       </div>
       <div class="panel-body">
