--- a/app/views/game/default.html.erb
+++ b/app/views/game/default.html.erb
@@ -1,1 +1,10 @@
-<h1>Hello ! </h1>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>RockPaperScissors</title>
+  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
+</head>
+<body>
+  <h1>Hello ! </h1>
+</body>
