Updated controller to produce color responsive button

--- a/app/views/userplays/rps.html.erb
+++ b/app/views/userplays/rps.html.erb
@@ -14,7 +14,7 @@
     <div class="col-md-offset-2 col-md-4">
       <div class="panel panel-success">
         <div class="panel-heading">
-          <h3 class="panel-title text-center"> <%= @computer_move %> </h3>
+          <h3 class="panel-title text-center"> <%= @computer_move.capitalize %> </h3>
         </div>
         <div class="panel-body">
           <img src="/assets/images/<%= @computer_move%>.png" class="img-responsive">
@@ -24,7 +24,7 @@
     <div class="col-md-4">
       <div class="panel panel-danger">
         <div class="panel-heading">
-          <h3 class="panel-title text-center"> <%= @user_move%> </h3>
+          <h3 class="panel-title text-center"> <%= @user_move.capitalize%> </h3>
         </div>
         <div class="panel-body">
           <img src="/assets/images/<%= @user_move%>.png" class="img-responsive">
@@ -36,7 +36,7 @@
     <div class="col-md-12">
       <div class="well text-center">
         <h1>
-          <span class="label label-success"> You <%= @result %> </span>
+          <span class="label label-success label-<%=@result_color[@result]%>"> You <%= @result %>! </span>
         </h1>
       </div>
     </div>
