Few more changes

--- a/app/views/rpsgame/home_form.html.erb
+++ b/app/views/rpsgame/home_form.html.erb
@@ -63,7 +63,7 @@
       <div class="col-md-12">
         <div class="well text-center">
           <h1>
-            <span class="label label-danger">You lost!</span>
+            <span class="label label-success">You won!</span>
           </h1>
         </div>
       </div>
