--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>RockPaperScissors</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="/assets/css/bootstrap.css">
+  <!-- <%= stylesheet_link_tag    'application', media: 'all' %> -->
+  <!-- <%= javascript_include_tag 'application' %> -->
+  <!-- <%= csrf_meta_tags %> -->
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
 
 </head>
 <body>
-  
+
   <%= yield %>
 
 </body>
