--- a/app/views/rps/output.html.erb
+++ b/app/views/rps/output.html.erb
@@ -3,9 +3,17 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2 col-xs-12">
       <div class="btn-group btn-group-justified">
-        <button type="button" class="btn btn-primary"><a href="/rock">Play Rock</a></button>
-        <button type="button" class="btn btn-primary"><a href="/paper">Play Paper</a></button>
-        <button type="button" class="btn btn-primary"><a href="/scissors">Play Scissors</a></button>
+        <a href="/rock" class="btn btn-block btn-primary">
+            Play Rock
+          </a>
+
+          <a href="/paper" class="btn btn-block btn-info">
+            Play Paper
+          </a>
+
+          <a href="/scissors" class="btn btn-block btn-primary">
+            Play Scissors
+          </a>
       </div>
     </div>
   </div>
@@ -20,37 +28,37 @@
             <%= @your_move %>
           </h2></div>
           <div class="panel-body">
-            <img class="img-responsive" src="<%= @your_image %>"
+            <img class="img-responsive" src="<%= @your_image %>">
           </div>
         </div>
       </div>
-    <div class="col-md-4 col-xs-6">
-      <div class="panel panel-danger">
-        <div class="panel-heading">
-          <h2 class="panel-title text-center">
-            <%= @computer_move %>
-          </h2>
-        </div>
+      <div class="col-md-4 col-xs-6">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h2 class="panel-title text-center">
+              <%= @computer_move %>
+            </h2>
+          </div>
           <div class="panel-body">
             <img class="img-responsive" src="<%= @computer_image %>"
           </div>
         </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12">
-      <div class="well text-center">
-        <h1>
-          <span class="label <%= @result_label %> ">
-          <%= @result_words %>
-        </span>
-        </h1>
       </div>
     </div>
-  </div>
 
-</div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="well text-center">
+          <h1>
+            <span class="label <%= @result_label %> ">
+              <%= @result_words %>
+            </span>
+          </h1>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
 </body>
 </html>
