--- a/app/views/game/scissors.html.erb
+++ b/app/views/game/scissors.html.erb
@@ -2,79 +2,79 @@
 
 <head>
   <!-- Connect to Bootstrap CSS -->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/bootstrap.css">
 
-  <!-- Connect to Font Awesome CSS -->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-    <!-- Connect to My CSS -->
-    <link rel="stylesheet" href="assers/stylesheets/application.css">
+  <!-- Connect to My CSS -->
+  <link rel="stylesheet" href="assets/stylesheets/application.css">
 
 </head>
 
 <body>
-  <hr>
-  <div class="row Butttons">
-    <div class="col-md-8 col-md-offset-2 col-xs-12 ">
-      <div class="btn-group-justified btn-group">
 
-      <a href="/rock" class="btn btn-block btn-primary">
-        Play Rock
-      </a>
+  <div class="container">
+    <hr>
+    <div class="row Butttons">
+      <div class="col-md-8 col-md-offset-2 col-xs-12 ">
+        <div class="btn-group-justified btn-group">
 
-      <a href="/paper" class="btn btn-block btn-info">
-        Play Paper
-      </a>
+          <a href="/rock" class="btn btn-block btn-primary">
+            Play Rock
+          </a>
 
-      <a href="/scissors" class="btn btn-block btn-primary">
-        Play Scissors
-      </a>
-    </div>
-  </div>
-</div>
-<hr>
-<div class="row Pictures">
-  <div class="col-md-offset-2 col-md-4 col-xs-6">
-    <div class="panel player">
-      <div class="panel-heading">
-        <h2 class="panel-title text-center">
-          Scissors
-        </h2>
-      </div>
-      <div class="panel-body">
-        <img class="img-responsive" src="/assets/images/scissors.png">
+          <a href="/paper" class="btn btn-block btn-info">
+            Play Paper
+          </a>
+
+          <a href="/scissors" class="btn btn-block btn-primary">
+            Play Scissors
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="col-md-4 col-xs-6">
-    <div class="panel computer">
-      <div class="panel-heading">
-        <h2 class="panel-title text-center">
-          <%= @computer_move.capitalize %>
-        </h2>
+    <hr>
+    <div class="row Pictures">
+      <div class="col-md-offset-2 col-md-4 col-xs-6">
+        <div class="panel panel-success">
+          <div class="panel-heading">
+            <h2 class="panel-title text-center">
+              Scissors
+            </h2>
+          </div>
+          <div class="panel-body">
+            <img class="img-responsive" src="/assets/images/scissors.png">
+          </div>
+        </div>
       </div>
-      <div class="panel-body">
-        <img class="img-responsive" src="/assets/images/<%= @computer_move %>.png">
+
+      <div class="col-md-4 col-xs-6">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h2 class="panel-title text-center">
+              <%= @computer_move.capitalize %>
+            </h2>
+          </div>
+          <div class="panel-body">
+            <img class="img-responsive" src="/assets/images/<%= @computer_move %>.png">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row Results">
+      <div class="col-sm-12">
+        <div class="well text-center">
+          <h1>
+
+            <span class="label <%= @button %>">
+              <%= @result %>
+            </span>
+          </h1>
+        </div>
       </div>
     </div>
   </div>
-</div>
-</div>
 
-<div class="row Results">
-  <div class="col-sm-12">
-    <div class="well text-center">
-      <h1>
-
-        <span class="label <%= @button %>">
-          <%= @result %>
-        </span>
-      </h1>
-    </div>
-  </div>
-</div>
-</div>
 </body>
 
 </html>
