--- a/app/views/rps/rock.html.erb
+++ b/app/views/rps/rock.html.erb
@@ -43,7 +43,7 @@
             <h3 class="panel-title"><%= @computer_move.capitalize %></h3>
           </div>
           <div class="panel-body">
-            Computer's Image
+            <img class="img-responsive" src="<%= @computer_image %>" alt="" />
           </div>
         </div>
 
@@ -53,7 +53,7 @@
       <div class="col-xs-12">
         <div class="well text-center">
           <h1>
-            <span class="label label-danger">
+            <span class="<%= @button_result %>">
               <%= @result %>
             </span>
           </h1>
