--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+  <link rel="stylesheet" href="public/assets/css/bootstrap.css">
+
   <title>RockPaperScissors</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
