--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+
+
+  <!-- Connecting to Bootstrap CSS-->
+<link rel="stylesheet" href="assets/css/bootstrap.css"
 </head>
 <body>
-
+  
 <%= yield %>
 
 </body>
