--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
 <html>
 <head>
   <title>RockPaperScissors</title>
