--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,70 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
 </head>
-<body>
 
-<%= yield %>
+<body>
+  <div class="container margin-top">
+    <hr>
+    <div class="row">
+      <div class="col-md-offset-2 col-md-8 margin-top">
+        <div class="btn-group btn-group-justified">
+          <a href="/rock" class="btn btn-block btn-primary">
+            Play Rock
+          </a>
+          <a href="/paper" class="btn btn-block btn-info">
+            Play Paper
+          </a>
+          <a href= "/scissor" class="btn btn-block btn-primary">
+            Play Scissors
+          </a>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-offset-2 col-md-4 col-xs-6">
+        <div class="panel panel-success">
+          <div class="panel-heading">
+            <h2 class="panel-title text-center">
+              <%= @user_move.capitalize %>
+            </h2>
+          </div>
+          <div class="panel-body">
+            <img src="assets/images/<%=@user_move%>.png" class="img-responsive" />
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h2 class="panel-title text-center">
+              <%= @computer_move.capitalize %>
+            </h2>
+          </div>
+          <div class="panel-body">
+            <img src="assets/images/<%=@computer_move%>.png" class="img-responsive" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="well text-center">
+          <h1>
+            <span class="label">
+              <%=@result %>
+            </span>
+          </h1>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
 
 </body>
 </html>
