Consolidate into 1 HTML file

--- a/app/views/rpsgame/rock.html.erb
+++ b/app/views/rpsgame/rock.html.erb
@@ -23,10 +23,12 @@
       <div class="col-md-4 col-md-offset-2 col-xs-6">
         <div class="panel panel-success">
           <div class="panel-heading">
-            <h2 class="panel-title text-center">Rock</h2>
+            <h2 class="panel-title text-center">
+              <%= @user_move %>
+            </h2>
           </div>
           <div class="panel-body">
-            <img class="img-responsive" src="/assets/images/rock.png">
+            <img class="img-responsive" src="<%=@user_image %>">
           </div>
         </div>
       </div>
