--- a/app/views/rpsgame/rock.html.erb
+++ b/app/views/rpsgame/rock.html.erb
@@ -24,11 +24,11 @@
         <div class="panel panel-success">
           <div class="panel-heading">
             <h2 class="panel-title text-center">
-              <%= @user_move %>
+              <%= @user_move.capitalize %>
             </h2>
           </div>
           <div class="panel-body">
-            <img class="img-responsive" src="<%=@user_image %>">
+            <img class="img-responsive" src="/assets/images/<%=@user_move %>.png">
           </div>
         </div>
       </div>
@@ -40,7 +40,7 @@
             </h2>
           </div>
           <div class="panel-body">
-            <img class="img-responsive" src="<%=@computer_image %>">
+            <img class="img-responsive" src="/assets/images/<%=@computer_move %>.png">
           </div>
         </div>
       </div>
