--- a/app/views/moves/rock.html.erb
+++ b/app/views/moves/rock.html.erb
@@ -35,7 +35,7 @@
           <h2 class="panel-title text-center">I played <%= @computer_move %>.</h2>
           </div>
           <div class="panel-body">
-          <%= image_tag ("#{@computer_move}.png") %>
+          <img class="img-responsive" src="/assets/images/<%= @computer_move %>.png">
           </div>
           </div>
         </div>
